--- a/MyCar/app/src/main/AndroidManifest.xml
+++ b/MyCar/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.MyCar"
         tools:targetApi="31">
         <activity
+            android:name=".MoreInfoActivity"
+            android:exported="false" />
+        <activity
             android:name=".AddCarActivity"
             android:exported="false" />
         <activity
