--- a/MyCar/app/src/main/AndroidManifest.xml
+++ b/MyCar/app/src/main/AndroidManifest.xml
@@ -36,6 +36,9 @@
             android:name=".AddCarActivity"
             android:exported="false" />
         <activity
+            android:name=".AddDistanceActivity"
+            android:exported="false" />
+        <activity
             android:name=".NoCarsActivity"
             android:exported="false" />
         <activity
