--- a/MyCar/app/build.gradle
+++ b/MyCar/app/build.gradle
@@ -42,4 +42,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
     implementation 'com.android.volley:volley:1.2.1'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:design:28.0.0'
 }
