--- a/MyCar/app/src/main/AndroidManifest.xml
+++ b/MyCar/app/src/main/AndroidManifest.xml
@@ -19,6 +19,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".SplashScreen"
+            android:exported="false" />
+        <activity
             android:name=".CarInfoActivity"
             android:exported="false" />
         <activity
